Bug 168152 - Writer markdown export: lists are not handled
Summary: Writer markdown export: lists are not handled
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.8.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:26.2.0
Keywords:
Depends on:
Blocks: Markdown
  Show dependency treegraph
 
Reported: 2025-08-28 07:32 UTC by Miklos Vajna
Modified: 2025-08-29 11:36 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
Minimal reproducer (43 bytes, text/markdown)
2025-08-28 07:32 UTC, Miklos Vajna
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2025-08-28 07:32:57 UTC
Created attachment 202554 [details]
Minimal reproducer

Steps to reproduce the problem:

1. Open the attached file in Writer
2. Save as markdown

Expected result: 2 bulleted and 3 numbered list items.

Actual result: list items are exported as plain text.
Comment 1 Commit Notification 2025-08-29 11:35:30 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/bcef97f29a7126cb3469066de4bacafaae30f86a

tdf#168152 sw markdown export: handle lists

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.