tdf#168152 sw markdown export: handle lists

Support the following cases:

1) Toplevel bullet list

2) Nested bullet list (needs indentation)

3) Toplevel numbered list

4) Nested numbered list

This is similar to how the ascii export adds an indent, bullets and
numbering for text nodes with a numbering rule, but
<https://spec.commonmark.org/0.31.2/#list-items> examples 294 -> 297
shows that the markdown indent has to be dynamic, based on the size of
the parent prefix, so write dynamic amount of indent, instead of the
ascii export's fixed 4 spaces.

Change-Id: Ia9eb0c718fc5f5334f19b592245b50bd32e8bd3e
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/190353
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Caolán McNamara <caolan.mcnamara@collabora.com>