sw/inc/editsh.hxx
@@ -530,7 +530,7 @@ public:
     void NoNum();
 
     /// Delete, split enumeration list.
-    void DelNumRules();
+    SW_DLLPUBLIC void DelNumRules();
 
     SW_DLLPUBLIC void NumUpDown( bool bDown = true );
 
